# meshradio

./: .gitignore  LICENSE  README.md  meshradio-architecture.md  meshradio.example.toml  meshradio.render.toml  pyproject.toml  relayrepushfix.patch  render.yaml
.claude/: launch.json
.github/workflows/: test.yml
deploy/: meshradio.service
meshradio/: __init__.py  app.py  backup.py  bus.py  config.py  db.py  net.py  runtime.py
meshradio/audio/: bluetooth.py  routing.py
meshradio/ingest/: corescope.py  mesh.py  parse.py  relay.py  service.py
meshradio/media/: cacher.py  metadata.py  player.py  radio.py
meshradio/system/: power.py  provision.py
meshradio/ui/: panel.py
meshradio/web/: context.py  routes_api.py  routes_ingest.py  routes_pages.py  server.py  sessions.py  ws.py
meshradio/web/static/: style.css
meshradio/web/static/js/: easter.js  embed.js  eq.js  fx.js  help.js  playbar.js  queue.js  radio.js  skin.js
meshradio/web/templates/: about.html  archive.html  archive_day.html  base.html  index.html  search.html  stats.html
meshradio/web/templates/partials/: day_nav.html  now_playing.html  queue.html
tests/: conftest.py  test_backup.py  test_bus.py  test_cacher.py  test_context.py  test_corescope.py  test_db.py  test_embed.py  test_ingest.py  test_parse.py  test_playback_policy.py  test_player.py  test_provision.py  test_radio.py  test_relay.py  test_runtime.py  test_sessions.py
