[project]
name = "meshradio"
version = "0.1.0"
description = "A standalone internet radio that plays the Austin MeshCore #music channel."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Media playback/download — installable everywhere, but mpv needs libmpv at runtime.
media = [
    "yt-dlp>=2025.1.26",
    "python-mpv>=1.0.7",
]
# Raspberry Pi hardware — only meaningful on the appliance itself.
hw = [
    "luma.oled>=3.13",
    "gpiozero>=2.0",
    "meshcore>=1.0",
]

[project.scripts]
meshradio = "meshradio.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meshradio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
